objects/asb_ListingAsset__c.object
<CustomObject><fields>
        <fullName>Caption__c</fullName>
        <description>The caption on a video or screenshot listing asset.</description>
        <inlineHelpText>The caption on a video or screenshot listing asset.</inlineHelpText>
        <label>Caption</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CompanyId__c</fullName>
        <description>The Company ID of the Brainshark video that is embedded on the listing if applicable.</description>
        <inlineHelpText>The Company ID of the Brainshark  video that is embedded on the listing if applicable.</inlineHelpText>
        <label>Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <description>The URL location where the asset can be found if it is referenced, not uploaded.</description>
        <inlineHelpText>The URL location where the asset can be found if it is referenced, not uploaded.</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <description>The order in which assets of the same type are shown on the listing. Lower numbers are shown first.</description>
        <inlineHelpText>The order in which assets of the same type are shown on the listing. Lower numbers are shown first.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>VideoEmbedId__c</fullName>
        <description>The ID of the video that is embedded on the listing if applicable.</description>
        <inlineHelpText>The ID of the video that is embedded on the listing if applicable.</inlineHelpText>
        <label>Video Embed ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>VideoType__c</fullName>
        <description>The type of video (YouTube, Vimeo or Brainshark) that is included on the listing.</description>
        <inlineHelpText>The type of video (YouTube, Vimeo or Brainshark) that is included on the listing.</inlineHelpText>
        <label>Video Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brainshark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vimeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>asb_Listing__c</fullName>
        <description>The listing that owns the asset.</description>
        <inlineHelpText>The listing that owns the asset.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipLabel>Listing Assets</relationshipLabel>
        <relationshipName>ListingAssets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Uploaded or referenced assets (e.g. videos, images) for each listing in the store.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Listing Asset</label><nameField>
        <label>Listing Asset Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Listing Assets</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><recordTypes>
        <fullName>Document</fullName>
        <active>true</active>
        <description>A document for a listing.</description>
        <label>Document</label>
    </recordTypes><recordTypes>
        <fullName>Image</fullName>
        <active>true</active>
        <description>An image for a listing.</description>
        <label>Image</label>
    </recordTypes><recordTypes>
        <fullName>Video</fullName>
        <active>true</active>
        <description>A video for a listing.</description>
        <label>Video</label>
    </recordTypes></CustomObject>